carrousel page indicator align correctly

--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -121,6 +121,7 @@
             flex: 1;
             display: flex;
             justify-content: center;
+            align-items: center;
             .selected {
               color: @cwColor2;
             }
